test/Programs/InvalidTests/polyMoreArgs/polyMoreArgs.cfs


start :: Int
start = id' [Int, Bool] 5

id' :: forall a => a -> a
id' x = x
